Fix canvas text not showing the right color

--- a/src/components/layout/canvas/Canvas.css
+++ b/src/components/layout/canvas/Canvas.css
@@ -1,4 +1,5 @@
 h2 span, p span {
+    color: var(--background);
     display: block;
 }
 
